--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -96,6 +96,16 @@ button:hover {
     margin-bottom: 5%;
     margin-left: 0px;
 }
+.popover ul li input{
+    position: relative;
+    margin-right: 10px;
+}
+.amenities h4{
+    width: 250px;
+    white-space: nowrap;
+    /* overflow: hidden;
+    text-overflow: ellipsis; */
+}
 
 .amenities:hover .popover,
 .locations:hover .popover {
