--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,15 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+header .api_status{
+    background-color: #cccccc;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: absolute;
+    right: 30px;
+    top: 15px;
+}
+.available{
+    background-color: #ff545f;
+}
