--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,7 +9,7 @@ header .logo {
     left: 20px;
     height: 100%;
 }
-header .api_status{
+.api_status{
     background-color: #cccccc;
     width: 40px;
     height: 40px;
@@ -20,4 +20,10 @@ header .api_status{
 }
 .available{
     background-color: #ff545f;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    position: absolute;
+    right: 30px;
+    top: 15px;
 }
